# opensearch_dumper

./: .gitignore  Dockerfile  README.md  docker-compose-runner.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_integration.py  utils.py
__fixtures__/: indices.txt
