[tool.poetry]
name = "opensearch-dumper"
version = "0.1.0"
description = ""
authors = ["Lior Friedler <lior@bigdataboutique.com>"]
readme = "README.md"
packages = [{include = "opensearch_dumper"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
tqdm = "^4.65.0"
opensearch-py = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

