[tool.poetry]
name = "opensearch-dumper"
version = "0.1.0"
description = ""
authors = ["Lior Friedler <lior@bigdataboutique.com>"]
readme = "README.md"
packages = [{include = "opensearch_dumper"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
tqdm = "^4.65.0"
opensearch-py = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
testcontainers-opensearch = "^0.0.1rc1"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

